Fix accessibility issue with contrast

--- a/src/_assets/sass/components/tagscloud.scss
+++ b/src/_assets/sass/components/tagscloud.scss
@@ -17,7 +17,7 @@
       text-decoration: none;
       white-space: nowrap;
 
-      background-color: $color-primary-lighter-3;
+      background-color: $color-primary-lighter-2;
       color: $color-white;
       border-radius: 0.2em;
     }
@@ -25,28 +25,28 @@
     &.tag2 {
       &:link,
       &:visited {
-        background-color: $color-primary-lighter-2;
+        background-color: $color-primary-lighter-1;
       }
     }
 
     &.tag3 {
       &:link,
       &:visited {
-        background-color: $color-primary-lighter-1;
+        background-color: $color-primary;
       }
     }
 
     &.tag4 {
       &:link,
       &:visited {
-        background-color: $color-primary;
+        background-color: $color-primary-darker-1;
       }
     }
 
     &.tag5 {
       &:link,
       &:visited {
-        background-color: $color-primary-darker-1;
+        background-color: $color-primary-darker-2;
       }
     }
 
